# image_embeddings

./: .gitignore  Dockerfile  README.md  embeddings.py  pyproject.toml  requirements.txt
